objects/zkusps__CustomsInformation__c.object
<CustomObject>
    <customHelpPage>zkusps__InternationalShipmentHelp</customHelpPage>
    <fields>
        <fullName>zkusps__certificateNumber__c</fullName>
        <label>Certificate Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__contentsExplanation__c</fullName>
        <label>Contents Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__contentsType__c</fullName>
        <label>Contents Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__eelPfc__c</fullName>
        <description>Exemption or Exclusion Legend (EEL) or a Proof of Filing Citation (PFC)</description>
        <inlineHelpText>Exemption or Exclusion Legend (EEL) or a Proof of Filing Citation (PFC)</inlineHelpText>
        <label>EEL/PFC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__importersCustomsReference__c</fullName>
        <label>Importer&apos;s Customs Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__invoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__licenseNumber__c</fullName>
        <label>License Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__nonDeliveryInstructions__c</fullName>
        <label>Non-Delivery Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__restrictionComments__c</fullName>
        <label>Restriction Comments</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__restrictionType__c</fullName>
        <label>Restriction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__sendersCustomsReference__c</fullName>
        <label>Sender&apos;s Customs Reference</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Customs Information</label>
    <listViews>
        <fullName>Nolan_Daigle_CustomsInformation</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkusps__All</fullName>
        <columns>NAME</columns>
        <columns>zkusps__contentsType__c</columns>
        <columns>zkusps__contentsExplanation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customs Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USPS Customs Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>